--- a/src/App.css
+++ b/src/App.css
@@ -303,11 +303,8 @@ input::placeholder {
 .sup-bordered-table .ant-table-tbody > tr:hover {
   background-color: #0000004d; /* Light blue */
   cursor: pointer;
-  color: #000000;
+  color: #ffffff;
   font-weight: 600;
 }
 
-.sup-bordered-table .ant-table-tbody > tr:hover td {
-  color: #000000;
-  font-weight: 600;
-}
+
